--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "kolonstudio-gos",
+  "email" : "johan@kolon.studio",
   "version": "1.0.0",
-  "description": "",
+  "description": "GOS - Gsap on scroll",
   "main": "index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kolonstudio/gos.git"
+    "url": "git+https://bitbucket.org/kolonstudio/gos.git"
   },
   "author": "Kolon studio",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kolonstudio/gos/issues"
+    "url": "https://bitbucket.org/kolonstudio/gos/jira"
   },
-  "homepage": "https://github.com/kolonstudio/gos#readme",
+  "homepage": "https://bitbucket.org/kolonstudio/gos#readme",
   "dependencies": {
     "gsap": "^3.7.1",
     "lodash.debounce": "^4.0.8",
