--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "url": "git+ssh://git@bitbucket.org/kolonstudio/gos.git"
   },
   "author": "kolonstudio",
-  "license": "MIT",
-  "homepage": "https://bitbucket.org/kolonstudio/gos#readme"
+  "license": "ISC",
+  "homepage": "https://kolon.studio"
 }
