--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Gsap on scroll",
   "main": "index.tsx",
   "dependencies": {
+    "gsap": "^3.7.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
+    "lodash.throttle": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
