--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "url": "git+ssh://git@bitbucket.org/kolonstudio/gos.git"
   },
   "author": "kolonstudio",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://kolon.studio"
 }
