--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "@kolonstudio/gos",
   "version": "1.0.1",
   "description": "Gsap on scroll",
-  "main": "index.tsx",
+  "main": "dist/index.js",
   "dependencies": {
     "gsap": "^3.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.2",
     "lodash.throttle": "^4.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "laravel-mix": "^6.0.29",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "mix",
+    "watch": "mix watch",
+    "production": "mix --production"
   },
   "repository": {
     "type": "git",
