--- a/package.json
+++ b/package.json
@@ -2,24 +2,13 @@
   "name": "@kolonstudio/gos",
   "version": "1.0.7",
   "description": "Gsap on scroll",
-  "main": "dist/index.js",
-  "types": "types/index.d.js",
+  "main": "index.js",
+  "types": "types/index.ts",
   "dependencies": {
-    "gsap": "^3.7.1",
-    "lodash.debounce": "^4.0.8",
-    "lodash.merge": "^4.6.2",
-    "lodash.throttle": "^4.1.1"
+    "gsap": "^3.7.1"
   },
-  "devDependencies": {
-    "laravel-mix": "^6.0.29",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.2"
-  },
-  "scripts": {
-    "dev": "mix",
-    "watch": "mix watch",
-    "production": "mix --production"
-  },
+  "devDependencies": {},
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/kolonstudio/gos.git"
